2002-07-20  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* lib/am/progs.am (install-%DIR%PROGRAMS, uninstall-%DIR%PROGRAMS):
	Always strip the directory part before applying $(transform),
	even for nobase_ targets.
	* lib/am/scripts.am (install-%DIR%SCRIPTS, uninstall-%DIR%SCRIPTS):
	Likewise.
	* tests/nobase.test: Use --program-prefix while testing nobase
	support.

2002-07-19  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* tests/dirname.test: Delete.  We don't define _AM_DIRNAME anymore.
	* tests/Makefile.am (TESTS): Remove dirname.test.

	* m4/init.m4: Require Autoconf 2.53b.
	* m4/header.m4 (AM_CONFIG_HEADER): Redefine using AU_DEFUN.
	* m4/ccstdc.m4 (fp_PROG_CC_STDC): New AU_DEFUN.
	* m4/dmalloc.m4 (fp_WITH_DMALLOC): Likewise.
	* m4/lispdir.m4 (ud_PATH_LISPDIR): Likewise.
	* m4/maintainer.m4 (jm_MAINTAINER_MODE): Likewise.
	* m4/protos.m4 (fp_C_PROTOTYPES): Likewise.
	* m4/regex.m4 (fp_WITH_REGEX): Likewise.
	* m4/termios.m4: Delete.  AM_SYS_POSIX_TERMIOS is now AU_DEFUNed
	in m4/obsolete.m4.
	* m4/winsz.m4: Delete. AM_HEADER_TIOCGWINSZ_NEEDS_SYS_IOCTL is now
	AU_DEFUNed in m4/obsolete.m4.
	* m4/obsol-gt.m4, m4/obsol-lt.m4, m4/obsolete.m4 : New files.
	* m4/Makefile.am (dist_m4data_DATA): Add obsol-gt.m4, obsol-lt.m4,
	and obsolete.m4. Remove termios.m4 and winsz.m4.
	* aclocal.in (obsolete, obsolete_rx): Remove.
	(scan_configure): Don't grep for obsolete macros.
	* tests/defs (AUTOUPDATE): Define.
	* Makefile.am (maintainer-check): Check for misuses of autoupdate.
	* tests/obsolete.test: Rewrite.  Exercize the AU_DEFUN macros from
	m4/obsolete.m4.

	Fix for PR automake/338:
	* automake.in (seen_gettext_external): New variable.
	(handle_gettext): Conditionalize the intl/ check on
	$seen_gettext_external.  Fix grep usage.
	(scan_autoconf_traces): Set $seen_gettext_external if
	`external' is passed to AM_GNU_GETTEXT.
	* tests/gettext.test, tests/gettext2.test: New files.
	* tests/Makefile.am (TESTS): Add gettext.test and gettext2.test.
