@@ -13,45 +13,41 @@ END
 cat > Makefile.am << 'END'
 AUTOMAKE_OPTIONS = gnits
 noinst_PROGRAMS = fubar2
-bin_PROGRAMS = fubar fine
+bin_PROGRAMS = fubar sub/fine
+nobase_bin_PROGRAMS = sub/fubar3
 fubar_SOURCES = fubar.c
-fubar2_SOURCES = fubar2.c
-fine_SOURCES = fine.c
+fubar2_SOURCES = fubar.c
+sub_fubar3_SOURCES = fubar.c
+sub_fine_SOURCES = fine.c
+bin_SCRIPTS = sub/scriptok.sh sub/scriptnok.sh
 END
 
-echo 'main(int argc, char **argv) { exit(0); }' > fubar.c
-echo 'main(int argc, char **argv) { exit(0); }' > fubar2.c
+echo 'int main () { return 0; }' > fubar.c
 
 cat > fine.c << 'END'
 #include <stdio.h>
-main(int argc, char **argv) {
+int
+main ()
+{
   puts ("Which version? Which usage?");
-  exit(0);
+  return 0;
 }
 END
 
-cat > check.sed << 'END'
-/fubar does not/ {
-  s/.*/0/
-  H
-}
-/fubar2 does not/ {
-  s/.*/1/
-  H
-}
-/fine does not/ {
-  s/.*/1/
-  H
-}
-$!d
+mkdir sub
 
-g
-/^\n0\n0$/! {
-  s/.*/1/
-  q
-}
-s/.*/0/
-END
+cat >sub/scriptok.sh <<EOF
+#!/bin/sh
+echo "Which version? Which usage?"
+EOF
+
+cat >sub/scriptnok.sh <<EOF
+#!/bin/sh
+:
+EOF
+
+chmod +x sub/scriptok.sh
+chmod +x sub/scriptnok.sh
 
 # Files required by Gnits.
 : > INSTALL
@@ -68,11 +64,20 @@ $ACLOCAL
 $AUTOCONF
 $AUTOMAKE -a
 
-mkdir sub
-cd sub
+mkdir build
+cd build
 
-../configure --prefix=`pwd`/../inst-dir
+# Use --program-prefix to make sure the std-options check honors it.
+../configure --prefix=`pwd`/../inst-dir --program-prefix=p
 $MAKE all
 $MAKE install
-exit `$MAKE installcheck 2>&1 | sed -f ../check.sed`
-
+test -f ../inst-dir/bin/pfine
+test ! -f ../inst-dir/bin/fine
+$MAKE -k installcheck 2>stderr && exit 1
+cat stderr
+grep 'pfubar does not support' stderr
+grep 'pfubar3 does not support' stderr
+grep 'pscriptnok.sh does not support' stderr
+# Only three failures please.
+test `grep 'does not support --help' stderr | wc -l` = 3
+test `grep 'does not support --version' stderr | wc -l` = 3
