@@ -1,5 +1,11 @@
 2002-07-20  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
+	* tests/gnits2.test: Use --program-prefix.  Test for scripts too.
+	Replace the sed script by calls to grep, easier to debug.
+	* lib/am/progs.am (installcheck-%DIR%PROGRAMS): Honor nobase
+	and $(transform).
+	* lib/am/scripts.am (installcheck-%DIR%SCRIPTS): Likewise.
+
 	* lib/am/progs.am (install-%DIR%PROGRAMS, uninstall-%DIR%PROGRAMS):
 	Always strip the directory part before applying $(transform),
 	even for nobase_ targets.
